                - creme.utils.JSON.readScriptText is deprecated; Use _.readJSONScriptText() instead.
        # In 'creme_core.models' :
            - The model 'CremeUser' :
                - gets a new field 'uuid'.
                - gets a new method 'has_perm_or_die()' which raises exceptions with friendly error messages.
            - The model 'FileRef' gets a new optional field "description";
              it's used by the new view which displays all FileRefs (so feel free to fill it).
        # Apps :
            * Persons :
                - The model 'Address' gets new semantic fields (like ZipCodeField) which allow to
                  easily customise things (like the form field, the field printer etc...).
            * Activities:
                - New FullCalendarBrick base class for implementation of calendar bricks.
                - Refactor of creme.ActivityCalendar :
                    - Add headlessMode flag.
                    - Add allowEventOverlaps property (boolean or method).
                    - Add allowEventCreate property (boolean).
            * Geolocation:
                - The urls used in brick controllers can be now overrided in python : do not require to override an entire template.
                    - DetailMapBrick.update_address_url
                    - FilteredMapBrick.addresses_url
                    - NeighboursMapBrick.neighbours_url
                - Markers with custom icons are now supported in maps:
                    - New registry geomarker_icon_registry allows to register an icon for a model.
                    - New setting key 'geolocation-use_entity_icon_key' enables the feature.
                - JSON data of creme.geolocation.PersonsBrick() controller is stored in a script (see {% jsondata %})
        # Javascript:
            * Add RelativeURL() class as an alternative of URL() that do not accepts relative paths (e.g '/list?page=1' is not a valid URL)
            * FormDialog: